--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <h1>{{ title }}</h1>
 <p>This is a bare-bones template.</p>
 <ul>
-{% for person in people %}
-  <li>{{ person.name }}</li>
+{% for account in tagName %}
+  <li>{{ account.name }}</li>
 {% endfor %}
 </ul>
