--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,13 +43,27 @@ code {
 
 .tweetbox {
   padding: 7px;
+  width:100%;
+  min-height:50px;
+ 
+
 }
 
+.tweet-text {
+  list-style-type: none;
+  
+}
 .tweetbox img {
   float: left;
   height: 48px;
   width: 48px;
+  padding:0px;
+  margin:0px;
   content:url("http://lorempixel.com/48/48");
+}
+.next-tweet {
+  width:100%;
+  height:10px;
 }
 .content {
   margin-left: 60px;
