--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 {% block content %}
   
   <div class="page-header">
-    <h1>Welcome to Twitter.js!</h1>
+    <h1>Welcome to Twitter.js, {{userAccount|title}}</h1>
   </div>
   <div class="row">
     <div class="col-md-3">
@@ -15,7 +15,12 @@
     
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.text}}</li>
+      
+        <div class='tweetbox'>
+        <li class='tweet-text'><img class='tweetbox'>{{tweet.text}}</li>
+        </div>
+        <div class='next-tweet'></div>
+        
       {% endfor %}
       
     </div>
