--- a/views/index.html
+++ b/views/index.html
@@ -3,28 +3,32 @@
 {% block content %}
   
   <div class="page-header">
-    <h1>Welcome to Twitter.js, {{userAccount|title}}</h1>
+    <h1>{{title}}</h1>
   </div>
   <div class="row">
     <div class="col-md-3">
       <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      <b>Your Name</b><br>
+      <b>{{name}}</b><br>
       100 followers
     </div>
     <div class="col-md-9">
     
       <!-- display tweets here -->
-      {% for tweet in tweets %}
+      <!--{% for tweet in tweets %}
       
         <div class='tweetbox'>
         <li class='tweet-text'><img class='tweetbox'>{{tweet.text}}</li>
         </div>
         <div class='next-tweet'></div>
         
-      {% endfor %}
+      {% endfor %}-->
 
       {% for tweet in tweets %}
         <li><a href="/users/{{tweet.name}}">{{tweet.name}}</a> - {{tweet.text}}</li>
+        <li><a href="/tweet/{{tweet.id}}">Tweet Link</a></li>
+      {% endfor %}
+      {% for tweet in singleTweet%}
+      <li>{{tweet.text}}</li>
       {% endfor %}
       
     </div>
