--- a/views/index.html
+++ b/views/index.html
@@ -22,10 +22,20 @@
         <div class='next-tweet'></div>
         
       {% endfor %}-->
+      {% if showForm %}
+        <form action="/tweets" method="POST">
+          <label for="name_field">Name:</label>
+          <input name="name" type="text" id="name_field" />
 
+          <label for="text_field">Text:</label>
+          <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+          <input type="submit" value="Submit" />
+        </form>
+      {% endif %}
       {% for tweet in tweets %}
         <li><a href="/users/{{tweet.name}}">{{tweet.name}}</a> - {{tweet.text}}</li>
-        <li><a href="/tweet/{{tweet.id}}">Tweet Link</a></li>
+        <li><a href="/tweets/{{tweet.id}}">Tweet Link</a></li>
       {% endfor %}
       {% for tweet in singleTweet%}
       <li>{{tweet.text}}</li>
